--- a/app/sass/_framework.sass
+++ b/app/sass/_framework.sass
@@ -1,11 +1,23 @@
 .pt50
 	padding-top: 50px
 
+.mb5
+	margin-bottom: 5px
+
 .mb7
 	margin-bottom: 7px
 
+.mb11
+	margin-bottom: 11px
+
 .mb13
 	margin-bottom: 13px
+
+.mb15
+	margin-bottom: 15px
+
+.mb17
+	margin-bottom: 17px
 
 .mb20
 	margin-bottom: 20px
@@ -28,8 +40,14 @@
 .mb50
 	margin-bottom: 50px
 
+.mb55
+	margin-bottom: 55px
+
 .mr105
 	margin-right: 105px
+
+.fz36
+	font-size: 36px
 
 .fz38
 	font-size: 38px
