--- a/app/twig/index.twig
+++ b/app/twig/index.twig
@@ -28,31 +28,144 @@
                 </div>
             </div>
         </div>
-        <div class="tasks">
-            <div class="container container_955">
-                <div class="tasks__grid tasks-grid mb50">
-                    <div class="tasks-grid__item tasks-grid__item_w410 tasks-grid-item">
-                        <div class="mb25"><span class="tasks-grid-item__title">Задача</span></div>
-                        <p class="tasks-grid-item__paragraph mb23">Создать приложение для Ростелекома с функционалом просмотра ТВ-программы и бесплатных передач от ВсёТВ.</p>
-                        <p class="tasks-grid-item__paragraph mb50">Реализовать необычную фильтрацию по большому банку фильмов Интерактивного ТВ Ростелеком.</p>
-                        <div class="mb25"><span class="tasks-grid-item__title">Клиент</span></div>
-                        <p class="tasks-grid-item__paragraph mb35">Компания iBecom — разработчик продуктов и решений в области микролокаций и indoor-навигации. <a href="www.espley.ru" target="_blank">www.espley.ru</a></p>
+
+        <div class="container container_955 mb50">
+            <div class="tasks__grid tasks-grid">
+                <div class="tasks-grid__item tasks-grid__item_w410 tasks-grid-item">
+                    <div class="mb25">
+                        <span class="tasks-grid-item__title">Задача</span>
                     </div>
-                    <div class="tasks-grid__item tasks-grid__item_w400 tasks-grid-item">
-                        <div class="mb25"><span class="tasks-grid-item__title">Проблематика</span></div><p class="tasks-grid-item__paragraph mb23">В приложении  пользователь должен искать фильмы, передачи не по привычным всем — режиссёру, актеру, году и прочим параметрам, а по настроению.</p>
-                        <p class="tasks-grid-item__paragraph mb7">Что нам хочется сегодня увидеть на экране:</p>
-                        <div class="tasks-hashtags">
-                            <div class="tasks-hashtags__item"><span class="hashtag">#МилыеЖивотные</span></div>
-                            <div class="tasks-hashtags__item"><span class="hashtag">#Спорт</span></div>
-                            <div class="tasks-hashtags__item"><span class="hashtag is-filled">#НеДляВсех</span></div>
-                            <div class="tasks-hashtags__item"><span class="hashtag">#СноваНаУчебу</span></div>
-                            <div class="tasks-hashtags__item"><span class="hashtag">#Авторазбор</span></div>
-                            <div class="tasks-hashtags__item"><span class="hashtag hashtag_dots">&middot;&middot;&middot;</span></div>
+                    <p class="tasks-grid-item__paragraph mb23">
+                        Создать приложение для Ростелекома с функционалом просмотра ТВ-программы и бесплатных передач от ВсёТВ.
+                    </p>
+                    <p class="tasks-grid-item__paragraph mb50">
+                        Реализовать необычную фильтрацию по большому банку фильмов Интерактивного ТВ Ростелеком.
+                    </p>
+                    <div class="mb25"><span class="tasks-grid-item__title">Клиент</span></div>
+                    <p class="tasks-grid-item__paragraph mb35">
+                        Компания iBecom — разработчик продуктов и решений в области микролокаций и indoor-навигации. <a href="www.espley.ru" target="_blank">www.espley.ru</a>
+                    </p>
+                </div>
+                <div class="tasks-grid__item tasks-grid__item_w400 tasks-grid-item">
+                    <div class="mb25">
+                        <span class="tasks-grid-item__title">Проблематика</span>
+                    </div>
+                    <p class="tasks-grid-item__paragraph mb23">В приложении  пользователь должен искать фильмы, передачи не по привычным всем — режиссёру, актеру, году и прочим параметрам, а по настроению.
+                    </p>
+                    <p class="tasks-grid-item__paragraph mb7">Что нам хочется сегодня увидеть на экране:</p>
+                    <div class="tasks-hashtags">
+                        <div class="tasks-hashtags__item"><span class="hashtag">#МилыеЖивотные</span></div>
+                        <div class="tasks-hashtags__item"><span class="hashtag">#Спорт</span></div>
+                        <div class="tasks-hashtags__item"><span class="hashtag is-filled">#НеДляВсех</span></div>
+                        <div class="tasks-hashtags__item"><span class="hashtag">#СноваНаУчебу</span></div>
+                        <div class="tasks-hashtags__item"><span class="hashtag">#Авторазбор</span></div>
+                        <div class="tasks-hashtags__item"><span class="hashtag hashtag_dots">&middot;&middot;&middot;</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container mb11">
+            <div class="short-description">
+                <div class="centered general__logo mb23"></div>
+                <div class="background-question">Что это?</div>
+                <div class="small-title fz38">Собственный инфо канал интерактивного ТВ.</div>
+                <div class="short-description-grid">
+                    <div class="short-description-grid__left-item">
+                        Узнай, какие фильмы есть в видеопрокате, какие каналы входят в пакет Интерактивного ТВ и еще целый спектр кино и тв новостей!
+                    </div>
+                    <div class="short-description-grid__center-item"></div>
+                    <div class="short-description-grid__right-item">
+                        Смотри выпуски передач ВСЕ ТВ, подписывайся на передачи и получай уведомления о выходе нового выпуска.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="design">
+        <div class="container">
+            <div class="small-title fz38 text-white text-center mb5">лаконичный и современный</div>
+            <div class="design__title">Дизайн</div>
+        </div>
+        <div class="container">
+            <div class="design-slider">
+                <div class="design-slider__carousel owl-carousel jq-design-slider">
+                    <div class="design-slider__slide design-slider__slide-1"></div>
+                    <div class="design-slider__slide design-slider__slide-2"></div>
+                    <div class="design-slider__slide design-slider__slide-3"></div>
+                    <div class="design-slider__slide design-slider__slide-4"></div>
+                    <div class="design-slider__slide design-slider__slide-5"></div>
+                    <div class="design-slider__slide design-slider__slide-6"></div>
+                    <div class="design-slider__slide design-slider__slide-7"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="tv-guide">
+        <div class="container">
+            <div class="section-number">1</div>
+            <div class="small-title fz36 mb17">Теле-гид</div>
+            <div class="tv-guide__paragraph">
+                Здесь собраны программы передач огромного количества каналов.  Реализована фильтрация по тематикам. Если захочется посмотреть передачу про жизнь животных или космос, выдача по параметру «образовательные» предложит более 20 каналов для прокачки знаний.
+            </div>
+        </div>
+        <div class="tv-guide-images">
+            <div class="tv-guide__image tv-guide__image_1"></div>
+            <div class="arrow arrow_1">Подробная карточка телепередачи</div>
+            <div class="tv-guide__image tv-guide__image_2"></div>
+            <div class="arrow arrow_2">Фильтрация по тематикам</div>
+            <div class="tv-guide__image tv-guide__image_3"></div>
+            <div class="arrow arrow_3">Программы, которые прямо сейчас идут на канале, подсвечиваются, что очень удобно</div>
+        </div>
+    </div>
+
+    <div class="collection">
+        <div class="container">
+            <div class="section-number">2</div>
+            <div class="small-title fz36 mb55">
+                Коллекция видеопроката, любимых фильмов и передач
+            </div>
+            <div class="collection__paragraph">В приложении представлена большая база фильмов, которые при желании можно купить. Навигация осуществляется с помощью хэштегов настроения. Можно посмотреть трейлер и рейтинг фильма в приложении. Сегодня настрой на русскую мелодраму — #Любить_По_Русски облегчит выбор фильма или сериала на вечер.
+            </div>
+            <div class="collection-images">
+                <div class="collection__gadget"></div>
+                <div class="collection__screen collection__screen_1"></div>
+                <div class="collection__screen collection__screen_2"></div>
+                <div class="collection__screen collection__screen_3"></div>
+                <div class="collection__price">229 руб</div>
+                <div class="collection__rating"><i class="fri fri-star"></i>8,9</div>
+                <div class="arrow arrow_4">Делитесь в соц. сетях</div>
+                <div class="collection__vk"></div>
+                <div class="collection__fb"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="my-collection">
+        <div class="container">
+            <div class="my-collection-wrapper">
+                <div class="my-collection__profile"></div>
+                <div class="my-collection__remind"></div>
+                <div class="my-collection__profile-descr">
+                    <div class="profile__photo"></div>
+                    <div class="profile__descr">
+                        <div class="profile__name">Евгений Лосев</div>
+                        <div class="profile__email">eugene@yandex.ru</div>
+                        <div class="profile__status">
+                            <i class="fri fri-camera"></i>
+                            <div class="profile__status-name">Кинолюбитель</div>
                         </div>
                     </div>
                 </div>
-                <div class="centered general__logo mb23"></div>
-                <div class="small-title fz38">Собственный инфо канал интерактивного ТВ.</div>
+                <div class="arrow arrow_5">Моя коллекция</div>
+                <div class="arrow arrow_6">Напоминания</div>
+                <div class="my-collection__top-text">
+                    Моя коллекция — это хорошее решение, чтобы не забыть посмотреть хороший фильм.
+                </div>
+                <div class="my-collection__bottom-text">
+                    <p class="paragraph">Понравившуюся картину можно оценить сердечком и она окажется в избранном. Своим выбором, отзывом или оценкой можно поделиться в социальных сетях.</p>
+                    <p class="paragraph">Для ТВ-программы оповещение выставляется за определенное время (30 мин, час, два и т.д.)</p>
+                </div>
             </div>
         </div>
     </div>
